--- a/src/component/metatesk.css
+++ b/src/component/metatesk.css
@@ -1,4 +1,3 @@
-/* nav section first */
 @font-face {
   font-family: "Calibri Light";
   font-style: normal;
@@ -15,28 +14,7 @@
   src: local('Nunito Medium'), url('./font/Nunito-Medium.ttf') format('ttf');
 }
 
-.general-section  svg{
-  fill: white;
-  width: 20px;
-}
 
-.navigation-div-first
-.navigation ul li:nth-last-of-type(4) a span {
-  margin: 0px 0px 0px 10px ;
-}
-
-
-.navigation-div-first
-.navigation ul button{
-  border: none;
-  height: 40px;
-  width: 70px;
-  border-radius: 30px;
-  color: #482AFF;
-  font-family: "Calibri Light";
-  font-size: large;
-  margin:auto -11% auto 2%;
-}
 
 
 .nav-section{
@@ -45,16 +23,16 @@
   z-index: 100;
   background-color: #482aff;
   box-shadow: 0 5px 5px rgb(5 25 114 / 40%);
-  padding: 5px 0px;
+  padding: 10px 0px;
 }
 
-.general-section{
+.navigation-div{
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.general-section a{
+.navigation-div a{
   width:200px;
   height: 100%;
 }
@@ -66,25 +44,33 @@
 }
 
 
-.general-section ul{
+.navigation-div ul{
   display: flex;
   justify-content: center;
-  align-items: center;
   margin-bottom: 0rem;
   margin-right: 50px;
 }
 
-@media(max-width:991px){
-  .general-section ul{
-    display: none;
-  }
+.responsive-navigation ul{
+  display: block;
+  margin: 80px auto auto 50px;
+  padding-left: 0px;
 }
 
-
-
-.general-section ul li{
+.navigation-div ul li{
   list-style: none;
-  margin: 5px 10px;
+  margin: 10px;
+  text-decoration: unset;
+  color: #fff;
+  font-size: 15px;
+  font-family: "Nunito";
+  cursor: pointer;
+  font-size: 2rem;
+}
+
+.navigation-div ul li a{
+  list-style: none;
+  margin: 10px;
   text-decoration: unset;
   color: #fff;
   font-size: 15px;
@@ -94,72 +80,65 @@
 }
 
 
-.general-section ul li a{
-  list-style: none;
-  margin: 0px 10px;
-  text-decoration: unset;
-  color: #fff;
-  font-size: 15px;
-  font-family: "Nunito";
-  cursor: pointer;
-  font-size: 1.5rem;
-}
-
-
 
 @media(max-width:768px){
-  .general-section ul li{
+  .navigation-div ul li{
     margin-right: 50px;
   }
 }
 
 
 .logo-image{
-  display: block;
-  width: 100% !important;
+  width: 3%;
   margin: 5px 0px 5px 30px;
-  cursor: pointer;
-}
-
-.navigation-div-first > a{
-  width: 50px;
-  height: auto;
-}
-
-@media(max-width:568px){
-  .navigation-div-first > a{
-    width: 30px;
-  }
 }
 
 .metatesk-image{
-  width: 15%;
+  width: 13%;
   margin: auto auto auto 40px;
 }
 
+@media(max-width:1119px){
+  .logo-image{
+    width: 5%;
+  }
+}
 
 @media(max-width:991px){
+  .logo-image{
+    width: 10%;
+  }
   .metatesk-image{
     width: 22%;
   }
 }
 
 @media(max-width:768px){
+  .logo-image{
+    width: 10%;
+  }
   .metatesk-image{
     width: 28%;
   }
 }
 
 @media(max-width:567px){
+  .logo-image{
+    width: 10%;
+  }
   .metatesk-image{
-    width: 25%;
-    margin: auto auto auto 10%;
+    width: 28%;
+    margin: auto auto auto 20px;
   }
 }
 
-@media(max-width:500px){
+@media(max-width:400px){
+  .logo-image{
+    width: 12%;
+  }
   .metatesk-image{
-    width: 30%;
+    width: 23%;
+    margin: auto auto auto 20px;
   }
 }
 
@@ -168,7 +147,7 @@
   top: 0px;
   right: 0%;
   width: 50%;
-  height: 95vh;
+  height: 100vh;
   background-color: #482AFF;
 }
 
@@ -176,167 +155,20 @@
   display: none;
 }
 
-@media(max-width:991px){
+@media(max-width:768px){
   .open-burger{
     display: block;
+    margin: auto 50px;
     padding: 6px 10px;
     background-color: unset;
     color: #fff;
-    font-size: 30px;
+    font-size: 25px;
     border: unset;
   }
   
   .responsive-navigation 
   .open-burger{
     margin: 20px auto auto 0px;
-  }
-}
-/* nav section second */
-
-.navigation-div-second{
-  display: flex;
-}
-
-.navigation-div-second ul li a {
-  font-family: "Calibri Light";
-}
-
-.navigation-div-second .navigation{
-  margin: auto 2% auto auto;
-}
-
-/* responsive */
-
-
-@media(min-width:991px){
-  .navigation-div-second
-  .menu-div{
-    display: none;
-  }
-}
-
-
-@media(max-width:991px){
-  .navigation-div-second 
-  .navigation{
-    margin: auto;
-  } 
-  .navigation-div-second{
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    background-color: #482AFF;
-    height: 70px;
-    width: 100%;
-  }
-
-  .navigation-div-second
-  .menu-div{
-    margin: auto;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    padding: 0px 10px;
-  }
-
-  .navigation-div-second 
-  .menu-div
-  .navigation{
-    display: none;
-  }
-
-  .navigation-div-second 
-  .menu-div
-  .icon{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 15%;
-    height: 100%;
-  }
-
-  .navigation-div-second 
-  .menu-div
-  .icon span{
-    display: block;
-    width: 30%;
-  }
-
-  .navigation-div-second 
-  .menu-div
-  .icon span svg{
-    fill: #fff;
-  }
-
-  .navigation-div-second 
-  .menu-div
-  .icon a{
-    color: white !important;
-    font-size: large;
-    text-decoration: none;
-    height: auto;
-    width: auto;
-  }
-
-
-  .navigation-div-second 
-  .menu-div  button:nth-of-type(1) {
-    border: none;
-    height: 40px;
-    width: 70px;
-    border-radius: 30px;
-    color: #482AFF;
-    font-family: "Nunito";
-    font-size: larger;
-    margin: 5px;
-  }
-
-  .responsive-navigation ul{
-    display: block;
-    margin: 20px auto auto 10px;
-    padding-left: 0px;
-  }
-
-  hr{
-    color: white;
-    width: 90%;
-    margin: auto;
-  }
-
-  .responsive-navigation 
-  ul:nth-of-type(1) li:nth-of-type(1) a span {
-    margin: 0px 0px 0px 10px;
-  }
-
-}
-
-@media(max-width:500px){
-  .navigation-div-second 
-  .menu-div
-  .icon{
-    width: 20%;
-  }
-
-  .general-section ul li a{
-    font-size: 1rem;
-  }
-
-  .responsive-navigation 
-  ul:nth-of-type(1) li:nth-of-type(1) a span {
-    margin: 0px 0px 0px 2px;
-  }
-}
-
-@media(max-width:400px){
-  .navigation-div-second 
-  .menu-div
-  .icon{
-    width: 25%;
-  }
-
-  .general-section ul li a{
-    font-size: 0.80rem;
   }
 }
 
@@ -383,7 +215,7 @@
   }
 }
 
-.metatesk-title-svg{
+.metatesk-title svg{
   width: 10%;
   margin: 30px;
 }
@@ -594,48 +426,20 @@
   align-items: center;
   position: absolute;
   left: 0px;
-  height: 600px;
+  height: 500px;
   width: 600px;
   z-index: 10;
 }
 
 .metatesk-section
 .section-one
-.text-container > div{
-  width: 80%;
-}
-
-
-.metatesk-section
-.section-one
-.text-container
-.img-container{
-  display: flex;
-  justify-content: space-evenly;
-  width: 70%;
-}
-
-.metatesk-section
-.section-one
-.text-container > div button{
-  border: none;
-  padding: 9px 16px;
-  border-radius: 30px;
-  background-color: #482AFF;
-  color: #fff;
-  font-family: "Nunito";
-}
-
-.metatesk-section
-.section-one
-.text-container
-.img-container img{
-  width: 20%;
+.text-container p{
+  line-height: 45px;
 }
 
 .metatesk-section
 .section-one p{
-  color: black;
+  color: #482AFF;
   margin-block-start: 0em;
   margin-block-end: 0em;
 }
@@ -643,20 +447,33 @@
 
 .metatesk-section
 .section-one .text-container  p:nth-of-type(1){
-  font-family: "Nunito";
-  font-size: 5rem;
-  font-weight: 900;
-  margin: auto auto 30px 5px ;
-  line-height: 1;
+  font-family: "Calibri light";
+  font-size: 30px;
+  font-weight:800;
+  line-height: 50px;
 }
 
 .metatesk-section
 .section-one .text-container  p:nth-of-type(2){
-  font-family: "Calibri light";
-  font-size: 1.5rem;
+  font-family: "Nunito";
+  font-size: 45px;
   font-weight:800;
-  margin: auto auto 30px 10px ;
-  line-height: 1.2;
+}
+
+.metatesk-section
+.section-one .text-container  p:nth-of-type(3){
+  font-family: "Calibri light";
+  font-size: 30px;
+  font-weight:800;
+}
+
+
+.metatesk-section
+.section-one .text-container  p:nth-of-type(4){
+  font-family: "Nunito";
+  font-size: 45px;
+  font-weight:800;
+  line-height: 50px;
 }
 
 
@@ -670,6 +487,22 @@
   .metatesk-section
   .section-one .text-container  p:nth-of-type(1){
     font-size: 20px;
+    line-height: 30px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 35px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 35px;
     line-height: 30px;
   }
 }
@@ -687,6 +520,21 @@
     line-height: 30px;
   }
   
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 30px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 30px;
+    line-height: 30px;
+  }
 }
 
 @media(max-width:768px){
@@ -696,6 +544,28 @@
     top: 0px;
     width: 300px;
     height: 300px;
+  }
+
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(1){
+    font-size: 20px;
+    line-height: 30px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 25px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 25px;
+    line-height: 30px;
   }
 }
 
@@ -714,6 +584,24 @@
     font-weight: 900;
   }
   
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 20px;
+    font-weight: 900;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 20px;
+    font-weight: 900;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 900;
+  }
 }
 
 @media(max-width:500px){
@@ -731,11 +619,31 @@
     line-height: 20px;
     font-weight: 900;
   }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 15px;
+    font-weight: 900;
+    line-height: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 15px;
+    font-weight: 900;
+    line-height: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 900;
+  }
 }
 
 @media(max-width:480px){
-  .metatesk-section .section-one 
-  .text-container{
+  .metatesk-section .section-one .text-container{
     top: 0px;
   }
 }
@@ -757,6 +665,26 @@
     font-weight: 700;
   }
   
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(2){
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(3){
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+  }
+  
+  .metatesk-section
+  .section-one .text-container  p:nth-of-type(4){
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 700;
+  }
 }
 
 .metatesk-section
