--- a/src/metatesk/metatesk.css
+++ b/src/metatesk/metatesk.css
@@ -502,9 +502,10 @@
 .section-one{
   position: relative;
   overflow: hidden;
-  background-image: url('./metaImg/Group 2.png');
+  background-image: url('./metaImg/bgShape.png');
   background-position: center;
   background-size: contain;
+  background-repeat: no-repeat;
   height: 600px;
 }
 
@@ -1531,376 +1532,142 @@ input{
 
 /* section two */
 
-.section-two{
-  margin: 40px auto;
-}
 
-
-.section-two .col-md-6{
-  height: auto;
-}
-
-.section-two .col-md-12{
-  text-align: center;
-  height: auto;
-  padding: 0px 0px 40px 0px;
-}
-
-.section-two .col-md-12 h3 {
-  margin-bottom: 0px;
-  position: relative;
-  /* right: 2%; */
-  font-size: 45px;
-  color: #482AFF;
-  font-weight: 800;
+.section-two 
+.col-md-12 div p:nth-of-type(1) {
+  font-size: 2.6rem;
+  font-weight: 900;
   font-family: "Nunito";
 }
 
-.section-two .col-md-12 h3 span{
-  font-size: 50px;
-}
-
-@media(max-width:1200px){
-  .section-two .col-md-12 h3 {
-    font-size: 35px;
-    font-weight: 800;
-  }
-  
-  .section-two .col-md-12 h3 span{
-    font-size: 40px;
-  }
-}
-
-@media(max-width:991px){
-  .section-two .col-md-12 h3 {
-    font-size: 25px;
-    font-weight: 800;
-  }
-  
-  .section-two .col-md-12 h3 span{
-    font-size: 30px;
-  }
-}
-
-@media(max-width:675px){
-  .section-two .col-md-12 h3 {
-    font-size: 20px;
-    font-weight: 800;
-  }
-  
-  .section-two .col-md-12 h3 span{
-    font-size: 25px;
-  }
-}
-
-@media(max-width:400px){
-  .section-two .col-md-12 h3 {
-    font-size: 15px;
-    font-weight: 800;
-  }
-  
-  .section-two .col-md-12 h3 span{
-    font-size: 20px;
-    margin: 0px 10px;
-  }
-}
-
-.section-two .text{
-  margin: 0px auto;
-  padding: 20px 0px;
-  display: flex;
-  justify-content:space-evenly;
-  align-items: center;
-}
 
 .section-two 
-.text-box-responsive{
-  display: none;
-}
-
-@media(max-width:1199px){
-  .section-two .text p{
-    font-size: 20px;
-    margin: 0px;
-    font-weight: 700;
-  }
-  .section-two 
-  .text p:nth-of-type(1)  {
-    padding: 5px 10px ;
-  }
-
-  .section-two 
-  .text p:nth-of-type(3)  {
-    padding: 5px 10px ;
-  }
-}
-
-
-
-.section-two .text p{
-  font-size: 30px;
-  margin: 0px;
-  color: #482AFF;
-  font-weight: 800;
-  font-family: "nunito";
-}
-
-.section-two 
-.text p:nth-of-type(1)  {
-  border: 4px solid #482AFF;
-  padding: 10px 20px ;
-  border-radius: 100px;
-}
-
-.section-two 
-.col-md-12
-.text p:nth-of-type(3)  {
-  border: 4px solid #482AFF;
-  padding: 10px 20px ;
-  border-radius: 100px;
-}
-
-.section-two 
-.text-box-responsive p:nth-of-type(2){
-  font-size: 25px;
-  color: #482AFF;
-  font-weight: bold;
+.col-md-12 div p:nth-of-type(2) {
+  font-size: 20px;
   font-family: "Calibri light";
-  margin: 10px auto;
-  margin-block-end: 0em;
 }
 
 
+.section-two{
+  margin: 50px auto;
+}
 
+.section-two .col-md-3{
+  padding: 10px 0px;
+}
+
+.section-two .col-md-3
+> div {
+  height: 350px;
+  margin: 20px;
+  border-radius: 49px;
+  
+}
 
 .section-two 
-.text-box-responsive
-.text-box
-p:nth-of-type(3) {
-  border: 4px solid #482AFF;
-  padding: 10px 20px ;
-  border-radius: 100px;
-}
-
-
-
-.section-two 
-.text-box-responsive
-p:nth-of-type(4)  {
-  border: 4px solid #482AFF;
-  padding: 10px 20px ;
-  border-radius: 100px;
-}
-
-@media(max-width:768px){
-  .section-two .text-box{
-    display: none;
-  }
-
-  .section-two .text-box-responsive{
-    display: flex;
-  }
-
-  .section-two .text{
-    flex-direction: column;
-  }
-
-  .section-two .text p{
-    flex-direction: column;
-    margin: 5px auto;
-  }
-}
-
-.section-two .img-box {
-  width: 100% !important;
-  height: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.section-two .img-box p{
-  font-size: 25px;
-  color: #482AFF;
-  font-weight: bold;
-  font-family: "Calibri light";
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-}
-
-
-@media(max-width:768px){
-  .section-two .img-box p{
-    display: none;
-  }
-}
-
-.section-two .img-box img{
-  width: 80%;
-  margin: 10px auto;
-  height: auto;
-  border-radius: 30px;
-  border: 5px solid #FBB116;
-}
-
-
-
-@media(max-width:675px){
-  .section-two .img-box img{
-    width: 100%;
-  }
-}
-
-.section-two .text-box{
-  padding-top:5px;
-  height: 100%;
-}
-
-.section-two .video-box{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-
-.vjs-icon-play,
-.video-js .vjs-big-play-button .vjs-icon-placeholder:before,
-.video-js .vjs-play-control .vjs-icon-placeholder {
-  content: "" !important;
-}
-
-
-
-.video-js {
-  margin: 20px auto;
-}
-
-.section-one
-.video-js .vjs-tech {
-  border-radius: 60px;
-  border: 5px solid #FBB116;
-  object-fit: cover;
-}
-
-
-
-
-.vjs-poster {
-  border-radius: 60px;
-  background-position: center !important;
-  background-size: 100% !important;
-}
-
-
-.video-js .vjs-big-play-button {
-  background-image: url('./metaImg/Polygo.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 60%;
-  font-size: 3em;
-  line-height: unset !important;
-  height: 280px !important;
-  width: 220px !important;
-  display: block;
+.slick-next{
   position: absolute;
-  top: 0% !important;
-  left: 38% !important;
-  padding: 0;
+  top: 50%;
+  right: -3%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: 2px solid #482aff;
+  border-radius: 25px;
   cursor: pointer;
-  opacity: 1;
-  border: 0.06666em solid #fff;
-  background-color: unset !important;
-  background-color: unset !important;
-  border: none !important;
-  border-radius: 0.3em;
-  transition: all 0.4s;
 }
 
-
-.vjs-has-started .vjs-control-bar {
-  display: flex;
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 0.1s, opacity 0.1s;
-  width: 84% !important;
-  margin: 0px auto 1px auto;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-
-.video {
-  width: 420px;
-  height: 260px;
-}
-
-
-@media(max-width:1800px) and (min-width:1400px){
-  .video{
-    width: 500px;
-    height: 320px;
-  }
-  .video-js .vjs-big-play-button{
-    height: 350px !important;
-  }
-}
-
-
-@media (max-width: 991px){
-.video-js .vjs-big-play-button {
-    height: 220px!important;
-    top: 45px!important;
-    margin-top: -0.9em!important;
-}
-}
-
-.video-js{
-  background-color:transparent!important;
-  border-radius: 60px;
-}
-
-.section-two
-.vjs-poster{
-  z-index: -1;
-}
-
-.section-two .video-box p{
+.section-two 
+.slick-next:before{
+  content: '>';
   font-size: 25px;
+  font-weight: 900;
   color: #482AFF;
-  font-weight: bold;
-  font-family: "Calibri light";
-  margin-block-start: 0em;
-  margin-block-end: 0em;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 30%;
+  top: 1%;
+  /* transform: translateY(50%); */
+  transform: translate(-50%, -50%);
 }
 
-@media(max-width:991px) {
-  .section-two .video-box> div{
-    width: 380px;
-    height: 250px;
-  }
-}
-
-@media(max-width:768px) {
-  .section-two .video-box{
-    flex-direction: column-reverse;
-  }
-}
-
-@media(max-width:450px) {
-  .section-two .video-box> div{
-    width:100%;
-  }
-}
 
 .section-two
-.video-js .vjs-tech {
-  border-radius: 60px;
-  border: 5px solid #FBB116;
-  object-fit: cover;
+.slick-prev{
+  position: absolute;
+  top: 50%;
+  left: -3%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: 2px solid #482aff;
+  border-radius: 25px;
+  cursor: pointer;
 }
+
+.section-two 
+.slick-prev:before{
+  content: '<';
+  font-size: 25px;
+  font-weight: 900;
+  color: #482AFF;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 30%;
+  top: 1%;
+  /* transform: translateY(50%); */
+  transform: translate(-50%, -50%);
+}
+
+
+.section-two .col-md-3
+> div .top-div{
+  height: 45%;
+  border-top-left-radius: 49px;
+  border-top-right-radius:49px;
+  
+}
+
+.section-two .col-md-3
+> div .top-div img{
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 49px;
+  border-top-right-radius:49px;
+}
+
+
+.section-two .col-md-3
+> div .bottom-div{
+  height: 60%;
+  border-bottom-left-radius: 49px;
+  border-bottom-right-radius:49px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.section-two .col-md-3
+> div .bottom-div button{
+    border-radius: 30px;
+    border: none;
+    margin: 20px 0;
+    background-color: #5ccdff;
+    color: #fff;
+    font-family: "Nunito";
+    font-weight: 700;
+    text-transform: lowercase;
+    padding: 5px 27px;
+    font-size: 1rem;
+}
+
+
 
 /* add-section-five */
 
